--- a/mini-portfolio/src/index.css
+++ b/mini-portfolio/src/index.css
@@ -1,13 +1,67 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 20vh;
+}
+.container {
+  margin: 0 auto;
+}
+button {
+  box-shadow: rgba(27, 32, 202, 0.08) 0px 8px 8px 0;
+  display: block;
+  margin: 10px auto;
+  border: 1px solid #1a64d6;
+  background-color: #885df1;
+  color: #fff;
+  font-size: 16px;
+  line-height: 22px;
+  padding: 16px 24px;
+  border-radius: 30px;
+  transition: all 200ms ease;
+  box-shadow: rgba(37, 39, 89, 0.08) 0px 8px 8px 0;
+  cursor: pointer;
+}
+button:hover {
+  color: white;
+  background: #1a64d6;
+  cursor: pointer;
+}
+ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+li {
+  color: black;
+  font-size: 30px;
+  list-style-type: none;
+  font-weight: 600;
+  line-height: 22px;
+  padding: 16px 24px;
+  border-radius: 30px;
+  transition: all 200ms ease;
+}
+li:hover {
+  background-color: #885df1;
+  cursor: pointer;
+  opacity: 0.7;
+}
+
+footer h3 {
+  text-align: center;
 }
